--- a/style/style.css
+++ b/style/style.css
@@ -1,36 +1,47 @@
-*
-{
-    list-style-type: none;
-    margin: 0px;
-    padding: 0px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+/* ------------------- Variables ------------------------ */
+
+:root{
+    /* text colors */
+    --text-gray : #808291;
+    --text-white: #f8f9fa;
+    --text-light: #f6f6f6;
+    --text-dark : #1A3260;
+    --text-dark2 : #1A3760D4;
+    --text-red : #ff4d6d;
+    --box-shadow: 0px 0px 50px 0px rgb(0 0 0 / 10%);
+    --bg-blue: rgb(249, 243, 255);
+    --bg-red: rgb(254, 247, 252);
+    --bg-yellow:rgb(255, 255, 246);
+    --bg-purple: rgb(246, 255, 255);
+
+    /* font familiy */
+    --font-poppins : "Poppins", 'sans-serif';
+
+    /* gradient colors */
+    --bg-gradient : linear-gradient(to right, #ff512f, #dd2476); 
+    --bg-gradient-indigo: linear-gradient(to right, #8e2de2, #4a00e0);
+    --bg-gradient-peach: linear-gradient(to right, #fff7f3, #fff7f3);
+
+    /* images */
+    --bg-profile : url('./assets/imgs/profile.jpeg')
+    
 }
-a
-{
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+a{
     text-decoration: none;
 }
 
-.flex
-{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+ul{
+    list-style-type: none;
 }
 
-w_100
-{
-    width: 100%;
-}
 
-w_30
-{
-    width: 30%;
-}
-w_70
-{
-    width: 70%;
-}
-
-.border
-{
-    border: 1px solid red;
-}
+/* ------------------- /Variables ------------------------ */
