--- a/style/style.css
+++ b/style/style.css
@@ -44,4 +44,257 @@ ul{
 }
 
 
-/* ------------------- /Variables ------------------------ */
+/* xxxxxxxxxxxxxxxxx Variables xxxxxxxxxxxxxxxxx */
+
+/* --------------Global classes -------------------- */
+
+.text-dark
+{
+    color: var(--text-dark);
+}
+
+.text-grey
+{
+    color: var(--text-gray);
+}
+
+.text-red
+{
+    color: var(--text-red);
+}
+
+.text-light
+{
+    color: var(--text-light);
+}
+
+.text-white
+{
+    color: var(--text-white);
+}
+
+.text-center
+{
+    text-align: center;
+}
+
+.text-sm
+{
+    font-size: 1em;
+    line-height: 1.5em;
+}
+
+.text-md
+{
+    font-size: 1.5em;
+}
+
+.text-lg
+{
+    font-size: 2.2em;
+    line-height: 3em;
+}
+
+.text-xl
+{
+    font-size: 3em;
+}
+
+.text-2xl
+{
+    font-size: 5em;
+}
+
+.text-uppercase
+{
+    text-transform: uppercase;
+}
+
+.font-poppins
+{
+    font-family: var(--font-poppins);
+}
+
+.font-bold
+{
+    font-weight: bold;
+}
+
+.bg-gradient
+{
+    background: var(--bg-gradient);
+}
+
+.bg-gradient-indigo
+{
+    background: var(--bg-gradient-indigo);
+}
+
+.bg-gradient-peach
+{
+    background: var(--bg-gradient-peach);
+}
+
+.bg-red
+{
+    background: var(--bg-red);
+}
+
+.bg-blue
+{
+    background: var(--bg-blue);
+}
+
+.bg-yellow
+{
+    background: var(--bg-yellow);
+}
+
+.bg-purple
+{
+    background: var(--bg-purple);
+}
+
+.flex
+{
+    display: flex;
+}
+
+.flex-row
+{
+    flex-direction: row;
+}
+
+.flex-column
+{
+    flex-direction: column;
+}
+
+.flex-wrap
+{
+    flex-wrap: wrap;
+}
+
+.flex-initial
+{
+    flex:0 1 auto;
+}
+
+.justify-center
+{
+    justify-content: center;
+}
+
+.mx-auto
+{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.py-2
+{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.py-5
+{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+.py-10
+{
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+}
+
+.px-5
+{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
+.px-10
+{
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+}
+
+.container
+{
+    width: 100%;
+}
+
+.container-fluid
+{
+    width: 98%;
+}
+
+.link
+{
+    color: var(--text-dark2);
+    font-weight: bold;
+}
+
+.link:hover
+{
+    color: var(--text-red);
+}
+
+.btn
+{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.btn-primary
+{
+    padding: .8rem 2rem;
+    border-radius: 50px;
+    font-family: var(--font-poppins);
+    font-weight: bold;
+}
+
+.btn-primary:hover
+{
+    background: var(--bg-gradient-indigo);
+}
+
+.btn-shadow
+{
+    box-shadow: var(--box-shadow);
+}
+
+.d-inline
+{
+    display: inline-block;
+}
+
+.d-block
+{
+    display: block;
+}
+
+.grid
+{
+    display: grid;
+}
+
+.cols-1
+{
+    grid-template-columns: repeat(1,minmax(0,1fr));
+}
+
+.w-100
+{
+    width: 100%;
+}
+
+.w-50
+{
+    width: 50%;
+}
+
+/* xxxxxxxxxxxxxxxxx Global classes xxxxxxxxxxxxxxxxx */
