--- a/style/style.css
+++ b/style/style.css
@@ -304,6 +304,46 @@ ul{
 
 /* xxxxxxxxxxxxxxxxx Global classes xxxxxxxxxxxxxxxxx */
 
+
+/* --------------Media query -------------------- */
+
+@media (min-width:1024px) {
+
+    .container{
+        max-width: 1024px;
+    }
+
+    #nav .toggle-btn
+    {
+        display: none;
+    }
+    
+    #nav{
+        flex-direction: row !important;
+        justify-content: space-between;
+    }
+
+    .collapse{
+        max-height: 10vh !important;
+        padding:1rem 10rem;
+       
+     
+    }
+
+    .collapse ul{
+        flex-direction: row !important;
+    }
+
+    .active{
+        max-height: 100% !important;
+    }
+}
+
+
+/* xxxxxxxxxxxxxxxxx Media Query xxxxxxxxxxxxxxxxx */
+
+
+
 /* --------------Navigation -------------------- */
 #nav
 {
