--- a/style/style.css
+++ b/style/style.css
@@ -25,7 +25,8 @@
     --bg-gradient-peach: linear-gradient(to right, #fff7f3, #fff7f3);
 
     /* images */
-    --bg-profile : url('./assets/imgs/profile.jpeg')
+    --bg-profile : url('./assets/imgs/bg.jpg');
+
     
 }
 
@@ -297,6 +298,11 @@ ul{
     width: 50%;
 }
 
+.w-80
+{
+    width: 80%;
+}
+
 .border
 {
     border: 0px solid black;
@@ -336,6 +342,18 @@ ul{
 
     .active{
         max-height: 100% !important;
+    }
+
+    #banner
+    {
+        display: flex;
+        flex-direction: row-reverse;
+        padding-top: 6rem;
+    }
+
+    #banner .banner-left
+    {
+        margin-top: 5rem;
     }
 }
 
@@ -396,4 +414,33 @@ ul{
 }
 
 
-/* ------------------- /Navigation Style ------------------------ */
+/* ------------------- /Navigation ------------------------ */
+/* ------------------- /Banner  ------------------------ */
+
+#banner
+{
+    position: relative;
+    height: 90vh;
+    top: 15vh;
+
+}
+
+#banner .banner-right img
+{
+    height: 350px;
+    border-radius:50% ;
+}
+
+#banner .banner-left
+{
+    padding-left: 1rem;
+    padding-top: 1rem;
+
+}
+
+/* ------------------- Banner area Style ------------------------ */
+
+
+
+
+/* ------------------- /Banner area Style ------------------------ */
